# sst-c-api

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  README_CPP.md  c_api.c  c_api.h  c_common.c  c_common.h  c_crypto.c  c_crypto.h  c_secure_comm.c  c_secure_comm.h  crypto_backend.h  crypto_mbedtls.c  crypto_openssl.c  iotauth-ref.txt  ipfs.c  ipfs.h  load_config.c  load_config.h  platform_compat.h
cpp/: CMakeLists.txt  README.md  c_api.cpp  c_api.hpp  c_common.cpp  c_common.hpp  c_crypto.cpp  c_crypto.hpp  c_secure_comm.cpp  c_secure_comm.hpp  load_config.cpp  load_config.hpp
cpp/src/: api.hpp  crypto.cpp  crypto.hpp
cpp/src/log/: log_manager.cpp  log_manager.hpp
cpp/src/net/: sockets.cpp  sockets.hpp  ssl_socket.cpp  ssl_socket.hpp
cpp/tests/: CMakeLists.txt  README.md  c_crypto_test.cpp  crypto_test.cpp  encrypt_buf_with_session_key_without_malloc_execution_time_test.cpp  multi_thread_get_session_key_test.cpp  save_load_session_key_list_with_password_test.cpp  socket_test.cpp
cpp/tests/test_configs/: c_compactionnode_CTR_noHMAC.config  c_compactionnode_GCM_noHMAC.config  c_computenode_CBC_noHMAC.config
embedded/: .build_target  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  make_build  make_build.sh  mbedtls_sst_config.h  notes.txt  run_build  run_build.sh  set_build  sst-libConfig.cmake  sst.config
embedded/config/: mbedtls_config.h
embedded/embedded/src/: sst_mbedtls.c
embedded/examples/: CMakeLists.txt  README.md  embedded_client.c  pico_test_encrypt.c
embedded/include/: FreeRTOSConfig.h  cmd_handler.h  config_handler.h  lwipopts.h  mbedtls_config.h  mbedtls_time_alt.h  pico_handler.h  protocol.h  ram_handler.h  sst_crypto_embedded.h  sst_mbedtls.h
embedded/receiver/: CMakeLists.txt  sst.config  update-credentials.sh
embedded/receiver/include/: key_exchange.h  protocol.h  replay_window.h  serial_linux.h  utils.h
embedded/receiver/src/: receiver_flash.c  receiver_uart.c  replay_window.c  serial_linux.c  utils.c
embedded/sender/: CMakeLists.txt
embedded/sender/src/: lifi_flash.c  lifi_sender_embedded.c  pico_test_encrypt.c
embedded/src/: c_crypto_embedded.c  cmd_handler.c  config_handler.c  mbedtls_time_alt.c  pico_handler.c  pico_helper.c  sst_crypto_embedded.c  sst_mbedtls.c
examples/: CMakeLists.txt  README.md  c_client.config  c_client_CTR_noHMAC.config  c_compactionnode_CTR_noHMAC.config  c_computenode_CBC_noHMAC.config  c_computenode_CTR_noHMAC.config  c_computenode_GCM_noHMAC.config  c_server.config  c_server_CTR_noHMAC.config  entity_client.c  entity_server.c  threaded_get_target_id_client.c  threaded_get_target_id_server.c
examples/SST_Testbed/: CMakeLists.txt  README.md  client.config  client.cpp  metrics.hpp  send_syn.cpp  send_syn.hpp  server.cpp
examples/SST_Testbed/clients_dos_attack/: clients_dos_setup.sh  config_generator.js  run_clients.sh
examples/SST_Testbed/config/: client_udp.config  server_udp.config
examples/SST_Testbed/csv_files/: dos_attack_message.csv  dos_attack_syn.csv  dos_attack_udp.csv
examples/SST_Testbed/lib/: README.md  metrics.cpp  metrics.hpp  send_syn.cpp  send_syn.hpp
examples/SST_Testbed/plot_generators/: README.md  latency_plot.py  plot.py  throughput_plot.py
examples/SST_Testbed/udp_stuff/: client_udp.config  server_udp.config
examples/file_block_encrypt_example/: CMakeLists.txt  README.md  block_common.h  block_reader.c  block_reader.config  block_reader_load_s_key_list.c  block_writer.c  block_writer.config
examples/heterogeneous_client/: CMakeLists.txt  README.md  heterogeneous_c_client.c  heterogeneous_c_client.config
examples/ipfs_examples/: CMakeLists.txt  README_Carlos.md  addReader.txt  downloader.config  downloader.cpp  entity_downloader.c  entity_uploader.c  secure_downloader.config  secure_entity_downloader.c  secure_entity_uploader.c  secure_uploader.config  sha256_hash.cpp  uploader.config  uploader.cpp
examples/ipfs_examples/c/: CMakeLists.txt  README.md  entity_downloader.c  entity_uploader.c  secure_downloader.config  (+3 more)
examples/scenario/: client.config  client.cpp  example_messages.csv  server.config  server.cpp
examples/scenario_attack1_seqnum/: CMakeLists.txt  README.md  client.cpp  server.cpp
examples/scenario_attacks/: client.cpp  configGenerator.js  entityGenerator.js  example_messages.csv
examples/scenario_example/: CMakeLists.txt  Instructions.txt  README.md  client.cpp  dos_attack_connect.csv  dos_attack_key.csv  dos_attack_messages.csv  metrics.cpp  metrics.hpp  replay_attack.csv  send_syn.cpp  send_syn.hpp  server.cpp  syn_flood.cpp
examples/server_client_example/: CMakeLists.txt  README.md  SST_read_client.c  SST_read_server.c  c_client.config  c_rc_client.config  c_rc_server.config  c_server.config  entity_client.c  entity_server.c  threaded_get_target_id_client.c  threaded_get_target_id_server.c
file_block_encrypt_example/: CMakeLists.txt  README.md  block_common.h  block_encrypt.c  block_reader.c  block_reader_load_s_key_list.c  block_receiver.c  block_sender.c  block_writer.c  block_writer.config  c_server.config
ipfs_examples/: CMakeLists.txt  addReader.txt  c_client.config  c_server.config  downloader.config  encrypted.txt  entity_client.c  entity_downloader.c  entity_server.c  entity_uploader.c  mid4cc_uploader.c  plain_text.txt  secure_downloader.config  secure_entity_downloader.c  secure_entity_uploader.c  uploader.config
tests/: CMakeLists.txt  CTR_test.c  CTR_test_malloc.c  README.md  aes_test.c  c_compactionnode_GCM_noHMAC.config  c_computenode_GCM_noHMAC.config  c_crypto_test.c  encrypt_buf_with_session_key_without_malloc_execution_time_test.c  multi_nonce_test.c  multi_thread_get_session_key.c  multi_thread_get_session_key_test.c  multiple_request_get_session_key_test.c  password_test.c  save_load_session_key_list_with_password_test.c  test.c
tests/test_configs/: c_compactionnode_CBC_noHMAC.config  c_compactionnode_CTR_noHMAC.config  c_compactionnode_GCM_noHMAC.config  c_computenode_CBC_noHMAC.config  c_computenode_CTR_noHMAC.config  c_computenode_GCM_noHMAC.config  client.config
(+102 files in other folders)
